--- a/index.html
+++ b/index.html
@@ -4,39 +4,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inserir</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <h1></h1>
     <label for="nomeUsu">Nome Completa:</label>
-    <input type="text" id="nomeUsu" name="nomeUsu"><br>
+    <input type="text" id="nomeUsu" name="nomeUsu"><br><br>
     <label for="loginUsu">Username:</label>
-    <input type="text" id="loginUsu" name="loginUsu"><br>
+    <input type="text" id="loginUsu" name="loginUsu"><br><br>
     <label for="emailUsu">Email:</label>
-    <input type="email" id="emailUsu" name="emailUsu"><br>
+    <input type="email" id="emailUsu" name="emailUsu"><br><br>
     <label for="teleUsu">Telefone:</label>
-    <input type="tel" id="teleUsu" name="teleUsu"><br>
+    <input type="tel" id="teleUsu" name="teleUsu"><br><br>
     <label for="fotoUsu">Foto:</label>
-    <input type="file" id="fotoUsu" name="fotoUsu" accept="image"><br>
+    <input type="file" id="fotoUsu" name="fotoUsu" accept="image"><br><br>
     <label for="senhaUsu">Senha:</label>
-    <input type="password" id="senhaUsu" name="senhaUsu"><br>
+    <input type="password" id="senhaUsu" name="senhaUsu" maxlength="20" minlength="8"><br><br>
+    <label id="8carac">- 8 caracteres -</label><br>
+    <label id="LetraMa">- Letra Maiuscula -</label><br>
+    <label id="LetraMi">- Letra Minuscula -</label><br>
+    <label id="Nume">- Numero -</label><br>
     <button onclick="Inserir()">Enviar</button>
 </body>
 <script>
     
 function Inserir() {
-    const xhttp = new XMLHttpRequest();
-    var nome = document.getElementById("nomeUsu").value;
-    var login = document.getElementById("loginUsu").value;
-    var email = document.getElementById("emailUsu").value;
-    var tele = document.getElementById("teleUsu").value;
-    // var foto = document.getElementById("fotoUsu");
-    var senha = document.getElementById("senhaUsu").value;
-    // console.log(foto.value);
-    xhttp.onload = function() {
-        alert(this.responseText);
+    if(!RegraSenha.includes(false))
+    {
+        const xhttp = new XMLHttpRequest();
+        var nome = document.getElementById("nomeUsu").value;
+        var login = document.getElementById("loginUsu").value;
+        var email = document.getElementById("emailUsu").value;
+        var tele = document.getElementById("teleUsu").value;
+        // var foto = document.getElementById("fotoUsu");
+        var senha = document.getElementById("senhaUsu").value;
+        // console.log(foto.value);
+        xhttp.onload = function() {
+            alert(this.responseText);
+        }
+        xhttp.open("POST", "insert.php?nome="+nome+"&email="+email+"&senha="+senha+"&login="+login+"&tele="+tele);
+        xhttp.send();
     }
-    xhttp.open("POST", "insert.php?nome="+nome+"&email="+email+"&senha="+senha+"&login="+login+"&tele="+tele);
-    xhttp.send();
+    else
+    {
+        alert("Criterios não atigindos");
+    }
 }
+var numeros = ['0','1','2','3','4','5','6','7','8','9'];
+var letras = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z'];
+var RegraSenha = [false, false,false,false];
+
+
+$(document).ready(function(){
+  $("#senhaUsu").keyup(function(e){
+    if (numeros.includes(e.key)) {
+        RegraSenha[0] = true;
+    }
+    else if(letras.includes(e.key)){
+        RegraSenha[1] = true;
+    }
+    else if(letras.includes((e.key).toLowerCase())){
+        RegraSenha[2] = true;
+    }
+    if (($('#senhaUsu').val()).length >= 8) {
+        RegraSenha[3] = true;
+    }
+    else{
+        RegraSenha[3] = false;
+    }
+    for (let index = 0; index < letras.length; index++){
+        if (!($('#senhaUsu').val()).includes(letras)) {
+            RegraSenha[1] = false;
+        }
+        else{
+            RegraSenha[1] = true;
+            index = letras.length;
+            console.log('A foi');
+        }
+        // if (!($('#senhaUsu').val()).toLowerCase().includes(letra)) {
+        //     RegraSenha[2] = false;
+        // }
+        // else{
+        //     RegraSenha[2] = true;
+        //     console.log('A foi');
+        //     return;
+        // }
+        console.log(RegraSenha[1]);
+    }
+    if (RegraSenha[0]) {
+        $('#Nume').attr('style','color: blue;');
+    }
+    else{
+        $('#Nume').attr('style','color: black;');
+    }
+    if(RegraSenha[1]){
+        $('#LetraMi').attr('style','color: blue;');
+    }
+    else{
+        $('#LetraMi').attr('style','color: black;');
+    }
+    if(RegraSenha[2]){
+        $('#LetraMa').attr('style','color: blue;');
+    }
+    else{
+        $('#LetraMa').attr('style','color: black;');
+    }
+    if(RegraSenha[3]){
+        $('#8carac').attr('style','color: blue;');
+    }
+    else{
+        $('#8carac').attr('style','color: black;');
+    }
+  });
+});
 </script>
 </html>
