--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inserir</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
+
 <body>
     <h1></h1>
     <label for="nomeUsu">Nome Completa:</label>
@@ -23,99 +25,130 @@
     <label id="8carac">- 8 caracteres -</label><br>
     <label id="LetraMa">- Letra Maiuscula -</label><br>
     <label id="LetraMi">- Letra Minuscula -</label><br>
+    <label id="Especial">- Caracter espacial -</label><br>
     <label id="Nume">- Numero -</label><br>
     <button onclick="Inserir()">Enviar</button>
 </body>
 <script>
-    
-function Inserir() {
-    if(!RegraSenha.includes(false))
-    {
-        const xhttp = new XMLHttpRequest();
-        var nome = document.getElementById("nomeUsu").value;
-        var login = document.getElementById("loginUsu").value;
-        var email = document.getElementById("emailUsu").value;
-        var tele = document.getElementById("teleUsu").value;
-        // var foto = document.getElementById("fotoUsu");
-        var senha = document.getElementById("senhaUsu").value;
-        // console.log(foto.value);
-        xhttp.onload = function() {
-            alert(this.responseText);
-        }
-        xhttp.open("POST", "insert.php?nome="+nome+"&email="+email+"&senha="+senha+"&login="+login+"&tele="+tele);
-        xhttp.send();
-    }
-    else
-    {
-        alert("Criterios não atigindos");
-    }
-}
-var numeros = ['0','1','2','3','4','5','6','7','8','9'];
-var letras = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z'];
-var RegraSenha = [false, false,false,false];
 
+    function Inserir() {
+        if (!RegraSenha.includes(false)) {
+            const xhttp = new XMLHttpRequest();
+            var nome = document.getElementById("nomeUsu").value;
+            var login = document.getElementById("loginUsu").value;
+            var email = document.getElementById("emailUsu").value;
+            var tele = document.getElementById("teleUsu").value;
+            // var foto = document.getElementById("fotoUsu");
+            var senha = document.getElementById("senhaUsu").value;
+            // console.log(foto.value);
+            xhttp.onload = function () {
+                alert(this.responseText);
+            }
+            xhttp.open("POST", "insert.php?nome=" + nome + "&email=" + email + "&senha=" + senha + "&login=" + login + "&tele=" + tele);
+            xhttp.send();
+        }
+        else {
+            alert("Criterios não atigindos");
+        }
+    }
+    var numeros = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9'];
+    var letras = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'];
+    var caracter = ["!", "?", ".", ";", ":", "-", "_", "+", "*", "/", "|", "\\", '$', '§', '€', '£', '¥', '@', '#', '%', '&', '~', '`', '}', '{','Ç'];
+    var RegraSenha = [false, false, false, false];
+    var find = false;
 
-$(document).ready(function(){
-  $("#senhaUsu").keyup(function(e){
-    if (numeros.includes(e.key)) {
-        RegraSenha[0] = true;
-    }
-    else if(letras.includes(e.key)){
-        RegraSenha[1] = true;
-    }
-    else if(letras.includes((e.key).toLowerCase())){
-        RegraSenha[2] = true;
-    }
-    if (($('#senhaUsu').val()).length >= 8) {
-        RegraSenha[3] = true;
-    }
-    else{
-        RegraSenha[3] = false;
-    }
-    for (let index = 0; index < letras.length; index++){
-        if (!($('#senhaUsu').val()).includes(letras)) {
-            RegraSenha[1] = false;
-        }
-        else{
-            RegraSenha[1] = true;
-            index = letras.length;
-            console.log('A foi');
-        }
-        // if (!($('#senhaUsu').val()).toLowerCase().includes(letra)) {
-        //     RegraSenha[2] = false;
-        // }
-        // else{
-        //     RegraSenha[2] = true;
-        //     console.log('A foi');
-        //     return;
-        // }
-        console.log(RegraSenha[1]);
-    }
-    if (RegraSenha[0]) {
-        $('#Nume').attr('style','color: blue;');
-    }
-    else{
-        $('#Nume').attr('style','color: black;');
-    }
-    if(RegraSenha[1]){
-        $('#LetraMi').attr('style','color: blue;');
-    }
-    else{
-        $('#LetraMi').attr('style','color: black;');
-    }
-    if(RegraSenha[2]){
-        $('#LetraMa').attr('style','color: blue;');
-    }
-    else{
-        $('#LetraMa').attr('style','color: black;');
-    }
-    if(RegraSenha[3]){
-        $('#8carac').attr('style','color: blue;');
-    }
-    else{
-        $('#8carac').attr('style','color: black;');
-    }
-  });
-});
+    $(document).ready(function () {
+        $("#senhaUsu").keyup(function (e) {
+            if (numeros.includes(e.key)) {
+                RegraSenha[0] = true;
+            }
+            else if (letras.includes(e.key)) {
+                RegraSenha[1] = true;
+            }
+            else if (letras.includes((e.key).toLowerCase())) {
+                RegraSenha[2] = true;
+            }
+            else if (caracter.includes(e.key)) {
+                RegraSenha[4] = true;
+            }
+            if (($('#senhaUsu').val()).length >= 8) {
+                RegraSenha[3] = true;
+            }
+            else {
+                RegraSenha[3] = false;
+            }
+            if (RegraSenha[1]) {
+                for (let index = 0; index < letras.length; index++) {
+                    if (($('#senhaUsu').val()).includes(letras[index])) {
+                        console.log(($('#senhaUsu').val()).includes(letras[index]));
+                        RegraSenha[1] = true;
+                        index = letras.length;
+
+                    }
+                }
+            }
+            if (RegraSenha[2]) {
+                RegraSenha[2] = false;
+                for (let index = 0; index < letras.length; index++) {
+                    if (($('#senhaUsu').val()).includes(letras[index].toUpperCase())) {
+                        console.log(($('#senhaUsu').val()).includes(letras[index]));
+                        RegraSenha[2] = true;
+                        index = letras.length;
+                    }
+                }
+            }
+            if (RegraSenha[4]) {
+                RegraSenha[4] = false;
+                for (let index = 0; index < caracter.length; index++) {
+                    if (!find) {
+                        if (($('#senhaUsu').val()).includes(caracter[index])) {
+                            console.log(($('#senhaUsu').val()).includes(caracter[index]));
+                            RegraSenha[4] = true;
+                            index = caracter.length;
+                        }
+                    }
+                }
+            }
+            // if (!($('#senhaUsu').val()).toLowerCase().includes(letra)) {
+            //     RegraSenha[2] = false;
+            // }
+            // else{
+            //     RegraSenha[2] = true;
+            //     console.log('A foi');
+            //     return;
+            // }
+            if (RegraSenha[0]) {
+                $('#Nume').attr('style', 'color: blue;');
+            }
+            else {
+                $('#Nume').attr('style', 'color: black;');
+            }
+            if (RegraSenha[1]) {
+                $('#LetraMi').attr('style', 'color: blue;');
+            }
+            else {
+                $('#LetraMi').attr('style', 'color: black;');
+            }
+            if (RegraSenha[2]) {
+                $('#LetraMa').attr('style', 'color: blue;');
+            }
+            else {
+                $('#LetraMa').attr('style', 'color: black;');
+            }
+            if (RegraSenha[3]) {
+                $('#8carac').attr('style', 'color: blue;');
+            }
+            else {
+                $('#8carac').attr('style', 'color: black;');
+            }
+            if (RegraSenha[4]) {
+                $('#Especial').attr('style', 'color: blue;');
+            }
+            else {
+                $('#Especial').attr('style', 'color: black;');
+            }
+        });
+    });
 </script>
+
 </html>
