--- a/criarCNTA/index.html
+++ b/criarCNTA/index.html
@@ -17,7 +17,7 @@
     <label for="emailUsu">Email:</label>
     <input type="email" id="emailUsu" name="emailUsu"><br><br>
     <label for="teleUsu">Telefone:</label>
-    <input type="tel" id="teleUsu" name="teleUsu"><br><br>
+    <input type="tel" id="teleUsu" name="teleUsu" maxlength="15" oninput="formatarTel(this)"><br><br>
     <label for="fotoUsu">Foto:</label>
     <input type="file" id="fotoUsu" name="fotoUsu" accept="image"><br><br>
     <label for="senhaUsu">Senha:</label>
@@ -29,129 +29,6 @@
     <label id="Nume">- Numero -</label><br>
     <button onclick="Inserir()">Enviar</button>
 </body>
-<script>
-
-    function Inserir() {
-        if (!RegraSenha.includes(false)) {
-            const xhttp = new XMLHttpRequest();
-            var nome = document.getElementById("nomeUsu").value;
-            var login = document.getElementById("loginUsu").value;
-            var email = document.getElementById("emailUsu").value;
-            var tele = document.getElementById("teleUsu").value;
-            // var foto = document.getElementById("fotoUsu");
-            var senha = document.getElementById("senhaUsu").value;
-            // console.log(foto.value);
-            xhttp.onload = function () {
-                alert(this.responseText);
-            }
-            xhttp.open("POST", "insert.php?nome=" + nome + "&email=" + email + "&senha=" + senha + "&login=" + login + "&tele=" + tele);
-            xhttp.send();
-        }
-        else {
-            alert("Criterios não atigindos");
-        }
-    }
-    var numeros = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9'];
-    var letras = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'];
-    var caracter = ["!", "?", ".", ";", ":", "-", "_", "+", "*", "/", "|", "\\", '$', '§', '€', '£', '¥', '@', '#', '%', '&', '~', '`', '}', '{','Ç'];
-    var RegraSenha = [false, false, false, false];
-    var find = false;
-
-    $(document).ready(function () {
-        $("#senhaUsu").keyup(function (e) {
-            if (numeros.includes(e.key)) {
-                RegraSenha[0] = true;
-            }
-            else if (letras.includes(e.key)) {
-                RegraSenha[1] = true;
-            }
-            else if (letras.includes((e.key).toLowerCase())) {
-                RegraSenha[2] = true;
-            }
-            else if (caracter.includes(e.key)) {
-                RegraSenha[4] = true;
-            }
-            if (($('#senhaUsu').val()).length >= 8) {
-                RegraSenha[3] = true;
-            }
-            else {
-                RegraSenha[3] = false;
-            }
-            if (RegraSenha[1]) {
-                for (let index = 0; index < letras.length; index++) {
-                    if (($('#senhaUsu').val()).includes(letras[index])) {
-                        console.log(($('#senhaUsu').val()).includes(letras[index]));
-                        RegraSenha[1] = true;
-                        index = letras.length;
-
-                    }
-                }
-            }
-            if (RegraSenha[2]) {
-                RegraSenha[2] = false;
-                for (let index = 0; index < letras.length; index++) {
-                    if (($('#senhaUsu').val()).includes(letras[index].toUpperCase())) {
-                        console.log(($('#senhaUsu').val()).includes(letras[index]));
-                        RegraSenha[2] = true;
-                        index = letras.length;
-                    }
-                }
-            }
-            if (RegraSenha[4]) {
-                RegraSenha[4] = false;
-                for (let index = 0; index < caracter.length; index++) {
-                    if (!find) {
-                        if (($('#senhaUsu').val()).includes(caracter[index])) {
-                            console.log(($('#senhaUsu').val()).includes(caracter[index]));
-                            RegraSenha[4] = true;
-                            index = caracter.length;
-                        }
-                    }
-                }
-            }
-            // if (!($('#senhaUsu').val()).toLowerCase().includes(letra)) {
-            //     RegraSenha[2] = false;
-            // }
-            // else{
-            //     RegraSenha[2] = true;
-            //     console.log('A foi');
-            //     return;
-            // }
-            regrasCheck();
-        });
-        function regrasCheck() {
-            if (RegraSenha[0]) {
-                $('#Nume').attr('style', 'color: blue;');
-            }
-            else {
-                $('#Nume').attr('style', 'color: black;');
-            }
-            if (RegraSenha[1]) {
-                $('#LetraMi').attr('style', 'color: blue;');
-            }
-            else {
-                $('#LetraMi').attr('style', 'color: black;');
-            }
-            if (RegraSenha[2]) {
-                $('#LetraMa').attr('style', 'color: blue;');
-            }
-            else {
-                $('#LetraMa').attr('style', 'color: black;');
-            }
-            if (RegraSenha[3]) {
-                $('#8carac').attr('style', 'color: blue;');
-            }
-            else {
-                $('#8carac').attr('style', 'color: black;');
-            }
-            if (RegraSenha[4]) {
-                $('#Especial').attr('style', 'color: blue;');
-            }
-            else {
-                $('#Especial').attr('style', 'color: black;');
-            }
-        }
-    });
-</script>
+<script src="regras.js"></script>
 
 </html>
