--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <header>
+        <a href="logarCNTA/login.html"><button>Logar</button></a>
+        <a href="criarCNTA/index.html"><button>Criar Conta</button></a>
+    </header>
     <h1>Menu inicial</h1>
     <label id="MsgBV">Bem-Vindo</label>
 </body>
