editar quase cabando

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <header>
-        <a href="logarCNTA/login.html"><button>Logar</button></a>
-        <a href="criarCNTA/index.html"><button>Criar Conta</button></a>
+        <a href="logarCNTA/"><button>Logar</button></a>
+        <a href="criarCNTA/"><button>Criar Conta</button></a>
+        <a href="registro/"><button>Registrados</button></a>
     </header>
     <h1>Menu inicial</h1>
     <label id="MsgBV">Bem-Vindo</label>
