--- a/registro/index.html
+++ b/registro/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registros</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 </head>
 
 <body>
     <table id="cadastros">
         <tr id="titulo">
+            <th>Login</th>
             <th>Nome</th>
+            <th>Email</th>
+            <th>fone</th>
+            <th>foto</th>
             <th>Editar</th>
             <th>Excluir</th>
         </tr>
@@ -21,40 +26,84 @@
             <td>AAAAAAA</td>
         </tr> -->
     </table>
+    <div id="ModalEditar" class="w3-modal">
+        <div class="w3-modal-content">
+            <div class="w3-container">
+                <span onclick="document.getElementById('ModalEditar').style.display='none';"
+                    class="w3-button w3-display-topright">&times;</span>
+                    <br>
+                <label for="nomeUsu">Alterar Nome Completa:</label>
+                <input type="text" id="nomeUsu" name="nomeUsu"><br><br>
+                <label for="loginUsu">Alterar Username:</label>
+                <input type="text" id="loginUsu" name="loginUsu"><br><br>
+                <label for="emailUsu">Alterar Email:</label>
+                <input type="email" id="emailUsu" name="emailUsu"><br><br>
+                <label for="teleUsu">Alterar Telefone:</label>
+                <input type="tel" id="teleUsu" name="teleUsu" maxlength="15" oninput="formatarTel(this)"><br><br>
+                <label for="senhaUsu">Senha Antiga:</label>
+                <input type="text" id="senhaUsuEdA" name="senhaUsu" maxlength="20" minlength="8"><br><br>
+                <label for="senhaUsu">Senha Nova:</label>
+                <input type="text" id="senhaUsuEdN" name="senhaUsu" maxlength="20" minlength="8"><br><br><br>
+                <button onclick="document.getElementById('ModalEditar').style.display='none';"
+                    class="w3-button w3-display-bottomleft">Cancelar
+                </button>
+                <button onclick="ConfiEdi()" class="w3-button w3-display-bottomright">Confirmar
+                </button>
+            </div>
+        </div>
+    </div>
+    <div id="ModalConExcluir" class="w3-modal">
+        <div class="w3-modal-content">
+            <div class="w3-container">
+                <br>
+                <label id="FraseConfExc"></label>
+                <br>
+                <label for="senhaUsu">Confirmar Senha:</label>
+                <input type="password" id="senhaUsuEX" name="senhaUsu" maxlength="20" minlength="8"><br><br>
+                <br>
+                <button onclick="document.getElementById('ModalConExcluir').style.display='none'"
+                    class="w3-button w3-display-bottomleft">Cancelar
+                </button>
+                <button onclick="exclusao()" class="w3-button w3-display-bottomright">Confirmar
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
-
 <script>
-    carregarLista()
-    function carregarLista() {
-        console.log("Sratr");
-        var vez = 0;
-        while (vez < 3) {
-            linhaPessoa(vez);
-            vez++;
+    function formatarTel(EntrTele) {
+        let valor = EntrTele.value;
+
+        // Remove letras
+        valor = valor.replace(/\D/g, "");
+
+        if (valor.length > 2) {
+            // Formatação (22) 22222-2222
+
+            valor = `(${valor.substring(0, 2)}) ${valor.substring(2, 7)}-${valor.substring(7)}`;
+        } else if (valor.length > 0) {
+            valor = `(${valor.substring(0, 2)}`;
         }
 
-
-        // const xhttp = new XMLHttpRequest();
-        // xhttp.onload = function () {
-        //     var resposta = (this.responseText).split("|");
-        //     console.log("ID: " + resposta[0] + "  Nome:" + resposta[1]);
-        //     document.getElementById("cadastros").innerHTML += "<tr><td>12</td><td>13</td><td>15</td></tr>";
-        // }
-        // xhttp.open("POST", "cadastrados.php?vez=" + vez);
-        // xhttp.send();
-    }
-    function linhaPessoa(vez) {
-        const xhttp = new XMLHttpRequest();
-        xhttp.onload = function () {
-            var resposta = (this.responseText).split("|");
-            var buttaoEdi = "<td><button id='editar"+vez+"'>Editar</button></td>";
-            var buttaoExc = "<td><button id='excluir"+vez+"'>Excluir</button></td>";
-            console.log("ID: " + resposta[0] + "  Nome:" + resposta[1]);
-            document.getElementById("cadastros").innerHTML += "<tr><td>"+resposta[1]+"</td>"+buttaoEdi+buttaoExc+"</tr>";
-        }
-        xhttp.open("POST", "cadastrados.php?vez=" + vez);
-        xhttp.send();
+        EntrTele.value = valor;
     }
 </script>
 
+<script src="carregarLista.js"></script>
+<script src="editar.js"></script>
+<script src="excluir.js"></script>
 </html>
+
+
+<!-- <script>
+    // $(document).ready(function () {
+    //     // Modal editar aparece
+    //     $("button").click(function (id) {
+    //         $(".editar").hide();
+    //     });
+    //     // Modal excluir aparece
+    //     $(".excluir").click(function () {
+    //         $(this).hide();
+    //     });
+    // });
+</script> -->
