--- a/registro/index.html
+++ b/registro/index.html
@@ -7,42 +7,38 @@
     <title>Registros</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <table id="cadastros">
-        <tr id="titulo">
-            <th>Login</th>
-            <th>Nome</th>
-            <th>Email</th>
-            <th>fone</th>
-            <th>foto</th>
-            <th>Editar</th>
-            <th>Excluir</th>
-        </tr>
-        <!-- <tr>
-            <td>AAAAAAA</td>
-            <td>AAAAAAA</td>
-            <td>AAAAAAA</td>
-        </tr> -->
-    </table>
+    <header>
+        <a href="../logarCNTA/"><button>Logar</button></a>
+        <a href="../criarCNTA/"><button>Criar Conta</button></a>
+    </header>
+    <div id="Registados">
+
+    </div>
     <div id="ModalEditar" class="w3-modal">
         <div class="w3-modal-content">
             <div class="w3-container">
                 <span onclick="document.getElementById('ModalEditar').style.display='none';"
                     class="w3-button w3-display-topright">&times;</span>
-                    <br>
-                <label for="nomeUsu">Alterar Nome Completa:</label>
+                <br>
+                <label>Alterar Nome Completa:</label>
                 <input type="text" id="nomeUsu" name="nomeUsu"><br><br>
-                <label for="loginUsu">Alterar Username:</label>
+                <label>Alterar Username:</label>
                 <input type="text" id="loginUsu" name="loginUsu"><br><br>
-                <label for="emailUsu">Alterar Email:</label>
+                <label>Alterar Email:</label>
                 <input type="email" id="emailUsu" name="emailUsu"><br><br>
-                <label for="teleUsu">Alterar Telefone:</label>
+                <label>Alterar Telefone:</label>
                 <input type="tel" id="teleUsu" name="teleUsu" maxlength="15" oninput="formatarTel(this)"><br><br>
-                <label for="senhaUsu">Senha Antiga:</label>
+                <label>Senha Antiga:</label>
                 <input type="text" id="senhaUsuEdA" name="senhaUsu" maxlength="20" minlength="8"><br><br>
-                <label for="senhaUsu">Senha Nova:</label>
+                <label>Senha Nova:</label>
                 <input type="text" id="senhaUsuEdN" name="senhaUsu" maxlength="20" minlength="8"><br><br><br>
                 <button onclick="document.getElementById('ModalEditar').style.display='none';"
                     class="w3-button w3-display-bottomleft">Cancelar
@@ -58,7 +54,7 @@
                 <br>
                 <label id="FraseConfExc"></label>
                 <br>
-                <label for="senhaUsu">Confirmar Senha:</label>
+                <label>Confirmar Senha:</label>
                 <input type="password" id="senhaUsuEX" name="senhaUsu" maxlength="20" minlength="8"><br><br>
                 <br>
                 <button onclick="document.getElementById('ModalConExcluir').style.display='none'"
@@ -69,6 +65,15 @@
             </div>
         </div>
     </div>
+    <!-- <div class="card" style="width: 18rem;"> card
+        <img class="card-img-top" src="..." alt="Card image cap"> imagem dele
+        <div class="card-body"> conteudo abaixo da imagem
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a> um botao
+        </div>
+    </div> -->
 </body>
 <script>
     function formatarTel(EntrTele) {
@@ -92,6 +97,7 @@
 <script src="carregarLista.js"></script>
 <script src="editar.js"></script>
 <script src="excluir.js"></script>
+
 </html>
 
 
