--- a/criarCNTA/index.html
+++ b/criarCNTA/index.html
@@ -9,24 +9,25 @@
 </head>
 
 <body>
-    
-    <label for="nomeUsu">Nome Completa:</label>
-    <input type="text" id="nomeUsu" name="nomeUsu"><br><br>
-    <label for="loginUsu">Username:</label>
-    <input type="text" id="loginUsu" name="loginUsu"><br><br>
-    <label for="emailUsu">Email:</label>
-    <input type="email" id="emailUsu" name="emailUsu"><br><br>
-    <label for="teleUsu">Telefone:</label>
-    <input type="tel" id="teleUsu" name="teleUsu" maxlength="15" oninput="formatarTel(this)"><br><br>
-    <label for="fotoUsu">Foto:</label>
-    <input type="file" id="fotoUsu" name="fotoUsu" accept="image"><br><br>
-    <label for="senhaUsu">Senha:</label>
-    <input type="password" id="senhaUsu" name="senhaUsu" maxlength="20" minlength="8"><br><br>
-    <label id="8carac">- 8 caracteres -</label><br>
-    <label id="LetraMa">- Letra Maiuscula -</label><br>
-    <label id="LetraMi">- Letra Minuscula -</label><br>
-    <label id="Especial">- Caracter espacial -</label><br>
-    <label id="Nume">- Numero -</label><br>
+    <form id="formCadastro" enctype="multipart/form-data">
+        <label for="nomeUsu">Nome Completa:</label>
+        <input type="text" id="nomeUsu" name="nomeUsu"><br><br>
+        <label for="loginUsu">Username:</label>
+        <input type="text" id="loginUsu" name="loginUsu"><br><br>
+        <label for="emailUsu">Email:</label>
+        <input type="email" id="emailUsu" name="emailUsu"><br><br>
+        <label for="teleUsu">Telefone:</label>
+        <input type="tel" id="teleUsu" name="teleUsu" maxlength="15" oninput="formatarTel(this)"><br><br>
+        <label for="fotoUsu">Foto:</label>
+        <input type="file" id="fotoUsu" name="fotoUsu" accept="image"><br><br>
+        <label for="senhaUsu">Senha:</label>
+        <input type="password" id="senhaUsu" name="senhaUsu" maxlength="20" minlength="8"><br><br>
+        <label id="8carac">- 8 caracteres -</label><br>
+        <label id="LetraMa">- Letra Maiuscula -</label><br>
+        <label id="LetraMi">- Letra Minuscula -</label><br>
+        <label id="Especial">- Caracter espacial -</label><br>
+        <label id="Nume">- Numero -</label><br>
+    </form>
     <button onclick="Inserir()">Enviar</button>
 </body>
 <script src="regras.js"></script>
