--- a/criarCNTA/index.html
+++ b/criarCNTA/index.html
@@ -4,31 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inserir</title>
+    <title>Criar Conta</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <form id="formCadastro" enctype="multipart/form-data">
-        <label for="nomeUsu">Nome Completa:</label>
-        <input type="text" id="nomeUsu" name="nomeUsu"><br><br>
-        <label for="loginUsu">Username:</label>
-        <input type="text" id="loginUsu" name="loginUsu"><br><br>
-        <label for="emailUsu">Email:</label>
-        <input type="email" id="emailUsu" name="emailUsu"><br><br>
-        <label for="teleUsu">Telefone:</label>
-        <input type="tel" id="teleUsu" name="teleUsu" maxlength="15" oninput="formatarTel(this)"><br><br>
-        <label for="fotoUsu">Foto:</label>
-        <input type="file" id="fotoUsu" name="fotoUsu" accept="image"><br><br>
-        <label for="senhaUsu">Senha:</label>
-        <input type="password" id="senhaUsu" name="senhaUsu" maxlength="20" minlength="8"><br><br>
-        <label id="8carac">- 8 caracteres -</label><br>
-        <label id="LetraMa">- Letra Maiuscula -</label><br>
-        <label id="LetraMi">- Letra Minuscula -</label><br>
-        <label id="Especial">- Caracter espacial -</label><br>
-        <label id="Nume">- Numero -</label><br>
-    </form>
-    <button onclick="Inserir()">Enviar</button>
+    <nav class="navbar">
+        <a href="./index.html">Home</a>
+        <a href="./logarCNTA/">Logar</a>
+        <a href="./criarCNTA/">Criar Conta</a>
+        <a href="./registro/">Registrados</a>
+    </nav>
+
+    <div class="container">
+        <h2>Crie sua Conta</h2>
+        <form id="formCadastro" enctype="multipart/form-data">
+            <label for="nomeUsu">Nome Completo:</label>
+            <input type="text" id="nomeUsu" name="nomeUsu"><br><br>
+            <label for="loginUsu">Username:</label>
+            <input type="text" id="loginUsu" name="loginUsu"><br><br>
+            <label for="emailUsu">Email:</label>
+            <input type="email" id="emailUsu" name="emailUsu"><br><br>
+            <label for="teleUsu">Telefone:</label>
+            <input type="tel" id="teleUsu" name="teleUsu" maxlength="15" oninput="formatarTel(this)"><br><br>
+            <label for="fotoUsu">Foto:</label>
+            <input type="file" id="fotoUsu" name="fotoUsu" accept="image"><br><br>
+            <label for="senhaUsu">Senha:</label>
+            <input type="password" id="senhaUsu" name="senhaUsu" maxlength="20" minlength="8"><br><br>
+            <div id="regras-senha">
+                <label id="8carac">- 8 caracteres -</label><br>
+                <label id="LetraMa">- Letra Maiuscula -</label><br>
+                <label id="LetraMi">- Letra Minuscula -</label><br>
+                <label id="Especial">- Caracter especial -</label><br>
+                <label id="Nume">- Numero -</label><br>
+            </div>
+        </form>
+        <button onclick="Inserir()">Enviar</button>
+    </div>
 </body>
 <script src="regras.js"></script>
 
