--- a/logarCNTA/index.html
+++ b/logarCNTA/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h2>Login</h2>
+    <nav class="navbar">
+        <a href="./index.html">Home</a>
+        <a href="./logarCNTA/">Logar</a>
+        <a href="./criarCNTA/">Criar Conta</a>
+        <a href="./registro/">Registrados</a>
+    </nav>
+
+    <div class="container">
+        <h2>Login</h2>
         <label for="usuario">Usuário:</label>
         <input type="text" id="usuario" name="usuario" required><br><br>
         <label for="senha">Senha:</label>
         <input type="password" id="senha" name="senha" required><br><br>
         <button type="submit" onclick="Procurar()">Entrar</button>
+    </div>
+
 </body>
 <script>
-    
+    // Seu script continua o mesmo
     function Procurar() {
             const xhttp = new XMLHttpRequest();
             var login = document.getElementById("usuario").value;
