--- a/registro/index.html
+++ b/registro/index.html
@@ -6,29 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registros</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <header>
-        <a href="../logarCNTA/"><button>Logar</button></a>
-        <a href="../criarCNTA/"><button>Criar Conta</button></a>
-    </header>
-    <div id="Registados">
+    <nav class="navbar">
+        <a href="./index.html">Home</a>
+        <a href="./logarCNTA/">Logar</a>
+        <a href="./criarCNTA/">Criar Conta</a>
+        <a href="./registro/">Registrados</a>
+    </nav>
 
+    <div class="container">
+        <h2 style="text-align: center; margin-bottom: 20px;">Usuários Cadastrados</h2>
+        <div id="Registados">
+            </div>
     </div>
+
     <div id="ModalEditar" class="w3-modal">
         <div class="w3-modal-content">
             <div class="w3-container">
                 <span onclick="document.getElementById('ModalEditar').style.display='none';"
                     class="w3-button w3-display-topright">&times;</span>
                 <br>
-                <label>Alterar Nome Completa:</label>
+                <label>Alterar Nome Completo:</label>
                 <input type="text" id="nomeUsu" name="nomeUsu"><br><br>
                 <label>Alterar Username:</label>
                 <input type="text" id="loginUsu" name="loginUsu"><br><br>
@@ -65,31 +71,17 @@
             </div>
         </div>
     </div>
-    <!-- <div class="card" style="width: 18rem;"> card
-        <img class="card-img-top" src="..." alt="Card image cap"> imagem dele
-        <div class="card-body"> conteudo abaixo da imagem
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a> um botao
-        </div>
-    </div> -->
 </body>
 <script>
+    // A função de formatar o telefone continua a mesma
     function formatarTel(EntrTele) {
         let valor = EntrTele.value;
-
-        // Remove letras
         valor = valor.replace(/\D/g, "");
-
         if (valor.length > 2) {
-            // Formatação (22) 22222-2222
-
             valor = `(${valor.substring(0, 2)}) ${valor.substring(2, 7)}-${valor.substring(7)}`;
         } else if (valor.length > 0) {
             valor = `(${valor.substring(0, 2)}`;
         }
-
         EntrTele.value = valor;
     }
 </script>
@@ -99,17 +91,3 @@
 <script src="excluir.js"></script>
 
 </html>
-
-
-<!-- <script>
-    // $(document).ready(function () {
-    //     // Modal editar aparece
-    //     $("button").click(function (id) {
-    //         $(".editar").hide();
-    //     });
-    //     // Modal excluir aparece
-    //     $(".excluir").click(function () {
-    //         $(this).hide();
-    //     });
-    // });
-</script> -->
