--- a/logarCNTA/index.html
+++ b/logarCNTA/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="./index.html">Home</a>
-        <a href="./logarCNTA/">Logar</a>
-        <a href="./criarCNTA/">Criar Conta</a>
-        <a href="./registro/">Registrados</a>
+        <a href="../index.html">Home</a>
+        <a href="../logarCNTA/">Logar</a>
+        <a href="../criarCNTA/">Criar Conta</a>
+        <a href="../registro/">Registrados</a>
     </nav>
 
     <div class="container">
