--- a/criarCNTA/index.html
+++ b/criarCNTA/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <nav class="navbar">
-        <a href="./index.html">Home</a>
-        <a href="./logarCNTA/">Logar</a>
-        <a href="./criarCNTA/">Criar Conta</a>
-        <a href="./registro/">Registrados</a>
+        <a href="../index.html">Home</a>
+        <a href="../logarCNTA/">Logar</a>
+        <a href="../criarCNTA/">Criar Conta</a>
+        <a href="../registro/">Registrados</a>
     </nav>
 
     <div class="container">
