--- a/registro/index.html
+++ b/registro/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registros</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
@@ -16,16 +16,16 @@
 
 <body>
     <nav class="navbar">
-        <a href="./index.html">Home</a>
-        <a href="./logarCNTA/">Logar</a>
-        <a href="./criarCNTA/">Criar Conta</a>
-        <a href="./registro/">Registrados</a>
+        <a href="../index.html">Home</a>
+        <a href="../logarCNTA/">Logar</a>
+        <a href="../criarCNTA/">Criar Conta</a>
+        <a href="../registro/">Registrados</a>
     </nav>
 
     <div class="container">
         <h2 style="text-align: center; margin-bottom: 20px;">Usuários Cadastrados</h2>
         <div id="Registados">
-            </div>
+        </div>
     </div>
 
     <div id="ModalEditar" class="w3-modal">
@@ -46,11 +46,10 @@
                 <input type="text" id="senhaUsuEdA" name="senhaUsu" maxlength="20" minlength="8"><br><br>
                 <label>Senha Nova:</label>
                 <input type="text" id="senhaUsuEdN" name="senhaUsu" maxlength="20" minlength="8"><br><br><br>
-                <button onclick="document.getElementById('ModalEditar').style.display='none';"
-                    class="w3-button w3-display-bottomleft">Cancelar
-                </button>
-                <button onclick="ConfiEdi()" class="w3-button w3-display-bottomright">Confirmar
-                </button>
+                <div class="modal-footer">
+                    <button onclick="document.getElementById('ModalEditar').style.display='none';" class="btn btn-secondary">Cancelar</button>
+                    <button onclick="ConfiEdi()" class="btn btn-primary">Confirmar</button>
+                </div>
             </div>
         </div>
     </div>
@@ -63,11 +62,10 @@
                 <label>Confirmar Senha:</label>
                 <input type="password" id="senhaUsuEX" name="senhaUsu" maxlength="20" minlength="8"><br><br>
                 <br>
-                <button onclick="document.getElementById('ModalConExcluir').style.display='none'"
-                    class="w3-button w3-display-bottomleft">Cancelar
-                </button>
-                <button onclick="exclusao()" class="w3-button w3-display-bottomright">Confirmar
-                </button>
+                <div class="modal-footer">
+                    <button onclick="document.getElementById('ModalConExcluir').style.display='none'" class="btn btn-secondary">Cancelar</button>
+                    <button onclick="exclusao()" class="btn btn-primary">Confirmar</button>
+                </div>
             </div>
         </div>
     </div>
